@@ -25,6 +25,8 @@ version before switching to this one.
   and consistency
 - bugfix: subsecond time properties generated by imfile, imklog and
   internal messages could be slightly inconsistent
+- bugfix: (potentially big) memory leak on HUP if queues could not be
+  drained before timeout - thanks to David Lang for pointing this out
 ---------------------------------------------------------------------------
 Version 3.21.5  [DEVEL] (rgerhards), 2008-09-30
 - performance optimization: unnecessary time() calls during message
